--- a/ws/src/main/webapp/style/styles.css
+++ b/ws/src/main/webapp/style/styles.css
@@ -22,6 +22,12 @@
 	font-size: small;
 }
 
+#mensajesOk p {
+	color: green;
+	/*font-size: 15px;*/
+	font-size: small;
+}
+
 #card {
 	width: 70%;
 	height: 70%;
