--- a/ws/src/main/webapp/style/styles.css
+++ b/ws/src/main/webapp/style/styles.css
@@ -95,6 +95,8 @@
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-bottom: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
 	border-radius: 0.5rem;
 }
 #tarjeta:hover {
@@ -103,6 +105,12 @@
 	padding-right: 20px;
 	border-radius: 0.5rem;
 	box-shadow: 0 8px 16px 0 #E5E9FF, 0 8px 16px 0 #1A2880; /*sombra*/
+}
+
+#contenedortarjeta{
+	margin-left: 10px;
+	align-items: center;
+	
 }
 
 a {
